--- a/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
+++ b/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
@@ -106,6 +106,9 @@ label.btn[class*="btn-outline-"] {
 .modal-footer {
 	border-top: none;
 }
+.modal-content {
+	border: none;
+}
 
 .nav-under {
 	.active {
